[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devicebuilder"
version = "0.1.0"
description = "Build and manipulate sparse Hamiltonian/overlap blocks from CP2K for transport workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Mauro Dossena" }]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "ase>=3.22",
  "matplotlib>=3.7",
]

